src/objects/outinstock__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>旧件序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>入库日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>库存编号</label>
        <referenceTo>stock__c</referenceTo>
        <relationshipLabel>出入库 (库存编号)</relationshipLabel>
        <relationshipName>Leo0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIS_No__c</fullName>
        <label>SIS No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bj_price__c</fullName>
        <label>备件单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chanpinleixing__c</fullName>
        <formula>product__r.RecordType.Name</formula>
        <label>产品类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ckplace__c</fullName>
        <label>仓库地点</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>广州库</fullName>
                </value>
                <value>
                    <fullName>北京库</fullName>
                </value>
                <value>
                    <fullName>上海库</fullName>
                </value>
                <value>
                    <fullName>香港库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EC3F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isbjfh__c</fullName>
        <label>是否备件返还</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>否</fullName>
                    <default>true</default>
                    <label>否</label>
                </value>
                <value>
                    <fullName>是</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isquartify__c</fullName>
        <label>是否确认入库</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>否</fullName>
                    <default>true</default>
                    <label>否</label>
                </value>
                <value>
                    <fullName>是</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>来源客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>出入库</relationshipLabel>
        <relationshipName>HHH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>出入库</relationshipLabel>
        <relationshipName>crk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>returntime__c</fullName>
        <label>返厂时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>spstate__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>审批中</fullName>
                </value>
                <value>
                    <fullName>审批通过</fullName>
                </value>
                <value>
                    <fullName>调回</fullName>
                </value>
                <value>
                    <fullName>拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态库</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新品库</fullName>
                </value>
                <value>
                    <fullName>损耗库</fullName>
                </value>
                <value>
                    <fullName>备用机库</fullName>
                </value>
                <value>
                    <fullName>备用机损耗库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stockNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>库存编号</label>
        <referenceTo>stock__c</referenceTo>
        <relationshipLabel>出入库</relationshipLabel>
        <relationshipName>Lewv</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>出入库</label>
    <listViews>
        <fullName>All</fullName>
        <columns>chanpinleixing__c</columns>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>state__c</columns>
        <columns>product__c</columns>
        <columns>isquartify__c</columns>
        <columns>number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>IN_Gobacktocompany</fullName>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>product__c</columns>
        <columns>returntime__c</columns>
        <columns>engineer__c</columns>
        <columns>stockNumber__c</columns>
        <columns>origin__c</columns>
        <columns>number__c</columns>
        <columns>state__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>outinstock__c.incangk</value>
        </filters>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>返公司</value>
        </filters>
        <label>入库-返公司</label>
    </listViews>
    <listViews>
        <fullName>IN_Gobacktofactory</fullName>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>product__c</columns>
        <columns>returntime__c</columns>
        <columns>engineer__c</columns>
        <columns>stockNumber__c</columns>
        <columns>origin__c</columns>
        <columns>number__c</columns>
        <columns>state__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>outinstock__c.incangk</value>
        </filters>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>返厂</value>
        </filters>
        <label>入库-返厂</label>
    </listViews>
    <listViews>
        <fullName>IN_Waste</fullName>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>product__c</columns>
        <columns>returntime__c</columns>
        <columns>engineer__c</columns>
        <columns>stockNumber__c</columns>
        <columns>origin__c</columns>
        <columns>number__c</columns>
        <columns>state__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>outinstock__c.incangk</value>
        </filters>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>废品库</value>
        </filters>
        <label>入库-废品库</label>
    </listViews>
    <listViews>
        <fullName>IN_new</fullName>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>product__c</columns>
        <columns>returntime__c</columns>
        <columns>engineer__c</columns>
        <columns>stockNumber__c</columns>
        <columns>origin__c</columns>
        <columns>number__c</columns>
        <columns>state__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>outinstock__c.incangk</value>
        </filters>
        <filters>
            <field>state__c</field>
            <operation>equals</operation>
            <value>新品库</value>
        </filters>
        <label>入库-新品库</label>
    </listViews>
    <listViews>
        <fullName>Out</fullName>
        <columns>NAME</columns>
        <columns>ckplace__c</columns>
        <columns>product__c</columns>
        <columns>returntime__c</columns>
        <columns>engineer__c</columns>
        <columns>stockNumber__c</columns>
        <columns>origin__c</columns>
        <columns>number__c</columns>
        <columns>state__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>outinstock__c.outcangk</value>
        </filters>
        <label>出库</label>
    </listViews>
    <nameField>
        <displayFormat>K{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>出入库</pluralLabel>
    <recordTypes>
        <fullName>incangk</fullName>
        <active>true</active>
        <description>用于备件返还、手动入库</description>
        <label>入库</label>
    </recordTypes>
    <recordTypes>
        <fullName>outcangk</fullName>
        <active>true</active>
        <description>用于自动创建出库、手动出库</description>
        <label>出库</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>